# app/security.go
@@ -1,0 +1,50 @@
+// Code generated by goagen v1.3.1, DO NOT EDIT.
+//
+// API "appengine": Application Security
+//
+// Command:
+// $ goagen
+// --design=github.com/groovenauts/blocks-concurrent-batch-server/design
+// --out=$(GOPATH)/src/github.com/groovenauts/blocks-concurrent-batch-server
+// --version=v1.3.1
+
+package app
+
+import (
+	"context"
+	"github.com/goadesign/goa"
+	"net/http"
+)
+
+type (
+	// Private type used to store auth handler info in request context
+	authMiddlewareKey string
+)
+
+// UseAPIKeyMiddleware mounts the api_key auth middleware onto the service.
+func UseAPIKeyMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("api_key"), middleware)
+}
+
+// NewAPIKeySecurity creates a api_key security definition.
+func NewAPIKeySecurity() *goa.APIKeySecurity {
+	def := goa.APIKeySecurity{
+		In:   goa.LocHeader,
+		Name: "Authorization",
+	}
+	def.Description = "Shared password"
+	return &def
+}
+
+// handleSecurity creates a handler that runs the auth middleware for the security scheme.
+func handleSecurity(schemeName string, h goa.Handler, scopes ...string) goa.Handler {
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		scheme := ctx.Value(authMiddlewareKey(schemeName))
+		am, ok := scheme.(goa.Middleware)
+		if !ok {
+			return goa.NoAuthMiddleware(schemeName)
+		}
+		ctx = goa.WithRequiredScopes(ctx, scopes)
+		return am(h)(ctx, rw, req)
+	}
+}
